Use circleci medium+ resource class for more RAM (6g > 4g).

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,8 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       - image: circleci/openjdk:11-jdk-node-browsers
 
+    resource_class: medium+
+
     working_directory: ~/repo
 
     environment:
