--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
     working_directory: ~/repo
 
     environment:
-      NO_GPU: true
+      NO_GPU: "true"
 
     steps:
       - checkout
@@ -43,8 +43,15 @@ jobs:
           fingerprints:
             - "e6:55:46:24:0b:66:40:62:f9:72:10:00:de:41:37:e6"
 
+      - run:
+          name: Save test results
+          command: |
+            mkdir -p build/test-results-circleci
+            find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} build/test-results-circleci/ \;
+          when: always
+
       - store_test_results:
-          path: build/reports/tests
+          path: build/test-results
 
       - store_artifacts:
           path: build/processedResources/js/main
