--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
     working_directory: ~/repo
 
     environment:
-      NO_GPU: true
+      NO_GPU: "true"
 
     steps:
       - checkout
@@ -44,7 +44,7 @@ jobs:
             - "e6:55:46:24:0b:66:40:62:f9:72:10:00:de:41:37:e6"
 
       - store_test_results:
-          path: build/reports/tests
+          path: build/test-results
 
       - store_artifacts:
           path: build/processedResources/js/main
