--- a/brain/sw/components/led-renderer/CMakeLists.txt
+++ b/brain/sw/components/led-renderer/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(COMPONENT_ADD_INCLUDEDIRS "include" "neopixel")
 
-set(COMPONENT_SRCS "led-renderer.cpp" "RgbColor.cpp"
+set(COMPONENT_SRCS "led-renderer.cpp" "RgbColor.cpp" "gamma.cpp"
         )
 
 set(COMPONENT_REQUIRES nvs_flash sysmon led_strip)
