--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,16 @@ build
 .gradle
 node_modules
 .DS_Store
+/.kotlin/metadata/kotlinTransformedMetadataLibraries/com.danielgergely.kgl-kgl-0.6.2-commonMain-YoXnbQ.klib
+/.kotlin/metadata/kotlinTransformedMetadataLibraries/io.github.murzagalin-multiplatform-expressions-evaluator-0.15.0-commonMain-T6h9jQ.klib
+/.kotlin/metadata/kotlinTransformedMetadataLibraries/io.insert-koin-koin-core-3.1.3-commonMain-nRtROg.klib
+/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlin-kotlin-stdlib-2.0.0-Beta4-commonMain-ap9o9Q.klib
+/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlin-kotlin-test-2.0.0-Beta4-annotationsCommonMain-5Q0gfg.klib
+/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlin-kotlin-test-2.0.0-Beta4-assertionsCommonMain-5Q0gfg.klib
+/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlinx-kotlinx-cli-0.3.5-commonMain-cwlL9w.klib
+/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlinx-kotlinx-coroutines-core-1.7.2-commonMain-s8bZOQ.klib
+/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlinx-kotlinx-datetime-0.5.0-commonMain-iqDvsQ.klib
+/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlinx-kotlinx-serialization-core-1.2.2-commonMain-0pDvJw.klib
+/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlinx-kotlinx-serialization-core-1.6.2-commonMain-0z2eOA.klib
+/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlinx-kotlinx-serialization-json-1.2.2-commonMain-Sjx8wQ.klib
+/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlinx-kotlinx-serialization-json-1.5.1-commonMain-xO3r_w.klib
