WIP use TimeFinder instead of beat listener.

--- a/data/config.json
+++ b/data/config.json
@@ -1,1 +1,1 @@
-{"runningShowPath":"PastureBedtime.sparkle","runningScenePath":"BAAAHS.scene"}
+{"runningShowPath":"BRC 2023.sparkle","runningScenePath":"Hi Res.scene","version":0}
