Main hardware built. Able to display things. Now need to do real shaders.

--- a/brain/sw/wigsnatch/main/CMakeLists.txt
+++ b/brain/sw/wigsnatch/main/CMakeLists.txt
@@ -1,6 +1,9 @@
 
 idf_component_register(SRCS
                     "main.cpp" "wigsnatch.cpp" "menu.cpp"
+                    "shader-growing.cpp"
+                    "shader-legs.cpp"
+                    "wig-shader.cpp"
                     INCLUDE_DIRS ".")
 
 # This is needed or else the ESP_LOGX functions generate errors during compile
