--- a/brain/sw/wigsnatch/main/CMakeLists.txt
+++ b/brain/sw/wigsnatch/main/CMakeLists.txt
@@ -4,6 +4,9 @@ idf_component_register(SRCS
                     "shader-growing.cpp"
                     "shader-legs.cpp"
                     "wig-shader.cpp"
+                    "shader-mq.cpp"
+                    "shader-top-sparkles.cpp"
+                    "shader-rotator.cpp"
                     INCLUDE_DIRS ".")
 
 # This is needed or else the ESP_LOGX functions generate errors during compile
