--- a/data/config.json
+++ b/data/config.json
@@ -1,1 +1,1 @@
-{"runningShowPath":"PastureBedtime.sparkle","runningScenePath":"BAAAHS.scene"}
+{"runningShowPath":"Campout 2024.sparkle","runningScenePath":"BAAAHS Campout 2024.scene","version":0}
