--- a/data/config.json
+++ b/data/config.json
@@ -1,1 +1,1 @@
-{"runningShowPath":"PastureBedtime.sparkle","runningScenePath":"BAAAHS.scene"}
+{"runningShowPath":"Eww Ravtards.sparkle","runningScenePath":"BAAAHS.scene","version":0}
