The clock is evil and mostly working

--- a/brain/sw/components/clock-sign/CMakeLists.txt
+++ b/brain/sw/components/clock-sign/CMakeLists.txt
@@ -5,6 +5,7 @@ set(COMPONENT_SRCS
         "cs-font.cpp"
         "cs-text.cpp"
         "cs-nye-clock.cpp"
+        "cs-evil-clock.cpp"
         )
 
 
