Switch to BRC 2024 show for default server.

--- a/data/config.json
+++ b/data/config.json
@@ -1,1 +1,1 @@
-{"runningShowPath":"Sonic Runway 2024.sparkle","runningScenePath":"BRC23.scene","version":0}
+{"runningShowPath":"BRC 2024.sparkle","runningScenePath":"BRC23.scene","version":0}
