Semi-working slightly working Android build.
* Run as foreground service.
* Switch to minSdk=28/androidx.

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,5 @@ kotlin.code.style=official
 
 # TODO: busted, see https://github.com/Kotlin/dukat/issues/207#issuecomment-581559041
 #kotlin.js.experimental.generateKotlinExternals=true
+
+android.useAndroidX=true
