--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -49,6 +49,7 @@ lwjglGlfw = { group = "org.lwjgl", name = "lwjgl-glfw", version.ref = "lwjgl" }
 lwjglOpengl = { group = "org.lwjgl", name = "lwjgl-opengl", version.ref = "lwjgl" }
 kglJs = { group = "com.danielgergely.kgl", name = "kgl-js", version.ref = "kgl" }
 kglAndroid = { group = "com.danielgergely.kgl", name = "kgl-android", version.ref = "kgl" }
+kglIos = { group = "com.danielgergely.kgl", name = "kgl-ios", version.ref = "kgl" }
 jmdns = { group = "org.jmdns", name = "jmdns", version = "3.5.7" }
 ktorServerCore = { group = "io.ktor", name = "ktor-server-core", version.ref = "ktor" }
 ktorServerNetty = { group = "io.ktor", name = "ktor-server-netty", version.ref = "ktor" }
