--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       - image: cimg/openjdk:18.0.2-node
 
-    resource_class: medium+
+    resource_class: large
 
     working_directory: ~/repo
 
