--- a/data/config.json
+++ b/data/config.json
@@ -1,1 +1,1 @@
-{"runningShowPath":"BRC 2024.sparkle","runningScenePath":"BRC23.scene","version":0}
+{"runningShowPath":"BRC 2024.sparkle","runningScenePath":"Empty.scene","version":0}
