WIP: iOS blackness fixed!

--- a/data/config.json
+++ b/data/config.json
@@ -1,1 +1,1 @@
-{"runningShowPath":"BRC 2024.sparkle","version":0}
+{"runningShowPath":"BRC 2024.sparkle","runningScenePath":"Untitled.scene","version":0}
