--- a/data/config.json
+++ b/data/config.json
@@ -1,1 +1,1 @@
-{"runningShowPath":"BRC 2024.sparkle","runningScenePath":"BAAAHS.scene","version":0}
+{"runningShowPath":"BRC 2024.sparkle","runningScenePath":"Living Room 2.scene","version":0}
