Revert DMX to 2024 impl
The new library was not working with the actual USB <> DMX adapter.

Also fix import paths on dylibs which fixed things on Kevin's new macbook

NEED to run x86_64 jvm currently

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -48,7 +48,7 @@ ktorServerCallLogging = { group = "io.ktor", name = "ktor-server-call-logging", 
 ktorServerWebsockets = { group = "io.ktor", name = "ktor-server-websockets", version.ref = "ktor" }
 logback = { group = "ch.qos.logback", name = "logback-classic", version = "1.3.11" }
 beatLink = { group = "org.deepsymmetry", name = "beat-link", version = "7.2.0" }
-ftd2xx = { group = "org.bidib.com.ftdi", name = "FTD2xxJ", version = "0.3.7" }
+#ftd2xx = { group = "org.bidib.com.ftdi", name = "FTD2xxJ", version = "0.3.7" }
 joml = { group = "org.joml", name = "joml", version = "1.9.25" }
 animatedGifLib = { group = "com.madgag", name = "animated-gif-lib", version = "1.4" }
 tarsosDspCore = { group = "be.tarsos.dsp", name = "core", version.ref = "tarsosDsp" }
