Provisioning updates for new 2025 panels.
* Add shader to assist with provisioning power on newly built panels.
* Bump default mapping pixel count from 1024 to 2048.

--- a/data/config.json
+++ b/data/config.json
@@ -1,1 +1,1 @@
-{"runningShowPath":"BRC 2024.sparkle","runningScenePath":"Living Room 2.scene","version":0}
+{"runningShowPath":"Provisioning.sparkle","runningScenePath":"BAAAHS 2025.scene","version":0}
